--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,13 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  flutter_svg: ^1.1.6
+
+  yumemi_weather:
+    git:
+      url: https://github.com/yumemi-inc/flutter-training.git
+      ref: main
+      path: packages/yumemi_weather
 
 dev_dependencies:
   flutter_test:
@@ -24,3 +31,5 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+  assets:
+    - assets/images/
