--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,12 @@ environment:
   sdk: '>=2.18.4 <3.0.0'
 
 dependencies:
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.6
+  freezed_annotation: ^2.2.0
+  json_serializable: ^6.5.4
 
   yumemi_weather:
     git:
@@ -22,14 +23,17 @@ dependencies:
       path: packages/yumemi_weather
 
 dev_dependencies:
+  blendthink_lints: ^3.0.0
+  build_runner: ^2.3.2
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-
-  flutter_lints: ^2.0.0
-  blendthink_lints: ^3.0.0
+  freezed: ^2.3.0
 
 flutter:
-
   uses-material-design: true
+
+  generate: false
+
   assets:
     - assets/images/
