--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,10 @@
 include: package:blendthink_lints/recommended.yaml
 
+analyzer:
+  exclude:
+    - "**/*.g.dart"
+  errors:
+    invalid_annotation_target: ignore
+
 linter:
   rules:
