--- a/build.yaml
+++ b/build.yaml
@@ -3,24 +3,6 @@ targets:
     builders:
       json_serializable:
         options:
-          checked: true
-          field_rename: snake
           any_map: false
-          create_factory: true
-          create_to_json: true
-          disallow_unrecognized_keys: false
-          explicit_to_json: false
-          generic_argument_factories: false
-          ignore_unannotated: false
-          include_if_null: true
-
-      freezed:
-        options:
-          checked: true
+          checked: false
           field_rename: snake
-          ignore_for_file:
-            - type=lintß
-            - implicit_dynamic_parameter
-            - implicit_dynamic_type
-            - implicit_dynamic_method
-            - strict_raw_type
