--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^1.1.6
   freezed_annotation: ^2.2.0
-  json_serializable: ^6.5.4
-
+  json_annotation: ^4.7.0
   yumemi_weather:
     git:
       url: https://github.com/yumemi-inc/flutter-training.git
@@ -28,12 +27,11 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  freezed: ^2.3.0
+  freezed: ^2.3.2
+  json_serializable: ^6.5.4
 
 flutter:
   uses-material-design: true
-
-  generate: false
 
   assets:
     - assets/images/
