--- a/build.yaml
+++ b/build.yaml
@@ -1,8 +1,14 @@
 targets:
   $default:
     builders:
+      source_gen|combining_builder:
+        options:
+          ignore_for_file:
+            - type=lint
+            - implicit_dynamic_parameter
+            - implicit_dynamic_type
+            - implicit_dynamic_method
+            - strict_raw_type
       json_serializable:
         options:
-          any_map: false
-          checked: false
           field_rename: snake
