--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.1.1
   flutter_svg: ^1.1.6
   freezed_annotation: ^2.2.0
   json_annotation: ^4.7.0
