--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
 dev_dependencies:
   blendthink_lints: ^3.0.0
   build_runner: ^2.3.2
+  flutter_gen_runner: 5.1.0+1
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
