add: 必要なPackageの追加・lintの内容を変更しました

--- a/build.yaml
+++ b/build.yaml
@@ -4,8 +4,10 @@ targets:
       source_gen|combining_builder:
         options:
           ignore_for_file:
-            - type=lint
             - implicit_dynamic_parameter
+            - unnecessary_null_checks
+            - require_trailing_commas
+            - lines_longer_than_80_chars
             - implicit_dynamic_type
             - implicit_dynamic_method
             - strict_raw_type
