--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.4.3
   flutter_svg: ^1.1.6
   freezed_annotation: ^2.2.0
   json_annotation: ^4.7.0
+  riverpod_annotation: ^2.2.0
+  riverpod_generator: ^2.3.3
   yumemi_weather:
     git:
       url: https://github.com/yumemi-inc/flutter-training.git
@@ -22,13 +25,13 @@ dependencies:
       path: packages/yumemi_weather
 
 dev_dependencies:
-  blendthink_lints: ^3.0.0
-  build_runner: ^2.3.2
+  build_runner: ^2.4.6
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
   freezed: ^2.3.2
-  json_serializable: ^6.5.4
+  json_serializable: ^6.7.1
+  pedantic_mono: ^1.24.0+1
 
 flutter:
   uses-material-design: true
