--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,8 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.4 <3.0.0'
+  sdk: '>=3.1.3 <4.0.0'
+  flutter: '>=3.13.6'
 
 dependencies:
   cupertino_icons: ^1.0.2
