--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.4.3
   flutter_svg: ^1.1.6
   freezed_annotation: ^2.2.0
   json_annotation: ^4.7.0
+  riverpod_annotation: ^2.2.0
+  riverpod_generator: ^2.3.3
   yumemi_weather:
     git:
       url: https://github.com/yumemi-inc/flutter-training.git
@@ -28,7 +31,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: ^2.3.2
-  json_serializable: ^6.5.4
+  json_serializable: ^6.7.1
   pedantic_mono: ^1.24.0+1
 
 flutter:
