--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,12 +27,14 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.3.2
+  custom_lint: ^0.5.3
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
   freezed: ^2.3.2
   json_serializable: ^6.7.1
   pedantic_mono: ^1.24.0+1
+  riverpod_lint: ^2.1.1
 
 flutter:
   uses-material-design: true
