--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_svg: ^1.1.6
   freezed_annotation: ^2.2.0
   json_annotation: ^4.7.0
+  mockito: ^5.4.2
   riverpod_annotation: ^2.2.0
   yumemi_weather:
     git:
