--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 *.freezed.dart linguist-generated=true
 *.g.dart linguist-generated=true
-*.mock.dart linguist-generated=true
+*.mocks.dart linguist-generated=true
